# teqi-canvas

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
demo/: main.cpp
dependencies/: CMakeLists.txt  FetchModule.cmake
include/teqi/: canvas.h
include/teqi/canvas/: keys.h  mouse.h  shader.h  shaderbuilder.h  shaderprogram.h  texture.h  utility.h  window.h
res/shader/: flat.fs  flat.vs
res/shaders/: flat.fs  flat.vs
res/textures/: ATTRIBUTION.md
src/: keys.cpp  mouse.cpp  shader.cpp  shaderbuilder.cpp  shaderprogram.cpp  texture.cpp  window.cpp
src/canvas/: keys.cpp  window.cpp
